--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle: ''
 description: ''
 keywords:
 author: Genshin Doe
-language: zh-CN
+language: 
 timezone: ''
 
 # URL
@@ -96,7 +96,7 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: Cutie
+theme: landscape
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
