--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "hexo-theme-landscape": "^1.0.0",
     "hexo-theme-stellar": "^1.27.0",
     "hexo-wordcount": "^6.0.1"
+  },
+  "scripts": {
+    "build": "hexo generate"
   }
 }
