--- a/_config.yml
+++ b/_config.yml
@@ -7,14 +7,14 @@ title: Hexo
 subtitle: ''
 description: ''
 keywords:
-author: Genshin Doe
-language: 
+author: World Creater
+language: zh-CN
 timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://example.com
-permalink: :year/:month/:day/:title/
+url: http://worldcreaterwc.github.io
+permalink: :year/:title/
 permalink_defaults:
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
@@ -102,3 +102,20 @@ theme: Cutie
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: ''
+markdown_it_plus:
+  render:
+    html: true            
+    xhtmlOut: false
+    breaks: true
+    linkify: true
+    typographer: true
+    quotes: '“”‘’'
+  # plugins:
+  #   - "@neilsustc/markdown-it-katex"
+  anchors:  
+    level: 2
+    collisionSuffix: 'v'
+    permalink: true
+    permalinkClass: header-anchor
+    permalinkSide: 'left'
+    permalinkSymbol: ¶
