--- a/themes/Cutie/_config.yml
+++ b/themes/Cutie/_config.yml
@@ -97,8 +97,8 @@ comments:
     serverurl: 
     reaction: false #文章反应，参见https://waline.js.org/guide/features/reaction.html
   twikoo:
-    enable: false
-    envid: 
+    enable: true
+    envid: https://worldcreater-twikoo.hf.space/
     lang: zh-CN # 用于手动设定评论区语言，支持的语言列表 https://github.com/twikoojs/twikoo/blob/main/src/client/utils/i18n/index.js
 
 Pageview_Counter: #浏览量功能
